--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booklist</title>
+    <title>Book list</title>
 </head>
 <body>
     <div>
-        Here is the <a href="">list</a> of books
+        Here is the <a href="/books">list</a> of books
     </div>
 </body>
 </html>
