--- a/views/book-list.ejs
+++ b/views/book-list.ejs
@@ -15,7 +15,7 @@
         </ul>
       </div>
 
-      <a href="/books/submit"></a>
+      <a href="/books/submit">Submit</a> another book
     
 </body>
 </html>
