--- a/views/book-submit.ejs
+++ b/views/book-submit.ejs
@@ -8,10 +8,11 @@
 <body>
     <h1>Add a book to the list</h1>
 
-    <form action="/books" method="POST">
-        <input type="text" placeholder="title">
-        <button>Submit</button>
+    <form method="POST">
+        <input type="text" placeholder="title" name="title">
+        <input type="text" placeholder="author" name="author">
+        <button type="submit">Submit</button>
     </form>
-    
+
 </body>
 </html>
