--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book list</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div>
-        Here is the <a href="/books">list</a> of books
+    <div class="wrapper">
+        <div class="main">
+            Here is the <a href="/books">list</a> of books
+        </div>
     </div>
 </body>
 </html>
